@@ -10,6 +10,8 @@ What's new in version 0.9.1
   (thanks to Seth Heeren for the idea and initial implementation)
 * Try harder to find the ncurses header
   (thanks to Moritz Barsnick)
+* Man page updates
+  (thanks to Vincent Launchbury)
 * BUGFIX: Support larger numbers for process times.
   (thanks to Tristan Nakagawa for the report.)
 * BUGFIX: Segfault in BarMeterMode_draw() for small terminal widths
